syntax = "proto3";
package messageBroker;
import "google/protobuf/empty.proto";

service Broker {
  rpc Suscribe(SuscriptionRequest) returns (SuscriptionResponse);
  rpc PostMessage(MessageRequest) returns (MessageResponse);
  rpc GetTopics(GetTopicRequest) returns (GetTopicResponse);
  rpc GetAllTopics(GetAllTopicRequest) returns (GetTopicResponse);
  rpc GetMessages(GetMessageRequest) returns(GetMessageResponse);
  rpc Register(RegisterRequest) returns(RegisterResponse); 
}


message User{
    string id = 1;
    string nombre = 2;
}

message RegisterRequest{
    User usuario =1;
}

message RegisterResponse{
    bool success = 1;
}

message Message{
    string id = 1;
    string contenido = 2;
}

message SuscriptionRequest{
    string id = 1;
    string topic = 2;
}

message MessageRequest{
    string topic = 1;
    Message mensaje = 2;
}
message MessageResponse{
    bool success =1;
}

message GetMessageRequest{
    string id = 1;
    string topic = 2;
}

message GetMessageResponse{
    repeated Message messages = 1;
}

message GetTopicRequest{
  string id =1;    
}
message GetTopicResponse{
    repeated string topics = 1;
}

message GetAllTopicRequest{
  string id = 1;
}

message SuscriptionResponse{
    bool success = 1;
  }
